Update CSS to fix navbar rounding on mobile and change h2 padding

--- a/css/main.scss
+++ b/css/main.scss
@@ -34,6 +34,10 @@ body {
   font-size: 18px;
   border: none;
 
+  border-radius: 4px;
+
+  margin: 0;
+
   .navbar-nav > li > a {
     color: $color-text-light-secondary;
 
@@ -87,6 +91,7 @@ body {
   }
 
   & > h2 {
+    margin-top: 2em;
     margin-bottom: -10px;
   }
 
